--- a/components/web_server/static/lunette/src/controls/sequencer-control/sequencer-control.css
+++ b/components/web_server/static/lunette/src/controls/sequencer-control/sequencer-control.css
@@ -1,21 +1,31 @@
+.auto-scroll.sequencer-control-container {
+  width: 100%;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
 .sequencer-control {
   display: grid;
-  grid-template-columns: repeat(9, 1fr);
+  grid-template-columns: repeat(var(--sequence-length, 8), 1fr);
   gap: var(--spacing-unit-0);
   width: 100%;
   padding: var(--spacing-unit-0);
   border-radius: 8px;
-  position: relative;
-  margin-top: 14px;
+  /* position: relative; */
+  /* overflow-x: auto; */
+  /* scroll-behavior: smooth; */
+}
+
+.auto-scroll .sequencer-control[data-length="17"] {
+  width: 180%;
 }
 
 .sequencer-label {
-  position: absolute;
+  /* position: absolute; */
   color: #666;
-  top: -13px;
   font-size: 10px;
-  left: 4px;
   text-transform: uppercase;
+  text-align: left;
 }
 
 .sequencer-cell {
@@ -79,4 +89,36 @@
 .sequencer-menu-button:hover {
   border-color: #999;
   background: var(--primary-color-light);
+}
+
+.sequencer-cell.disabled {
+  background-color: #e0e0e0;
+  border-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.sequencer-cell.disabled:hover {
+  border-color: #ccc;
+  background-color: #e0e0e0;
+}
+
+.sequencer-cell.disabled.active {
+  background-color: #e0e0e0;
+  border-color: #ccc;
+}
+
+.sequencer-cell.highlighted {
+  background-color: #f5f5f5;
+  border-color: #ddd;
+}
+
+.sequencer-cell.highlighted:hover {
+  border-color: #999;
+  background-color: #f0f0f0;
+}
+
+.sequencer-cell.highlighted.active {
+  background: var(--primary-color-light);
+  border-color: var(--primary-color-light);
 }
